--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.cs496.secondproject01">
 
     <uses-sdk
-        android:minSdkVersion="23"
-        android:targetSdkVersion="8" />
+        android:minSdkVersion="20"
+        android:targetSdkVersion="25" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -24,7 +24,7 @@
         android:theme="@android:style/Theme.NoTitleBar">
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,6 +36,8 @@
             android:label="@string/title_activity_main"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".AlbumView"/>
+        <activity android:name=".FullScreenPop"/>
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -65,7 +67,7 @@
             android:name=".AddBoxPop"
             android:label="@string/title_activity_add_box_pop"
             android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.PopupTheme"></activity>
+            android:theme="@style/AppTheme.PopupTheme"/>
 
         <activity android:name="com.yongbeam.y_photopicker.util.photopicker.PhotoPickerActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
